Fix 1Password credential setup for devcontainer
- Use native Claude Code installer instead of npm
- Source .env file in postStartCommand for OP_SERVICE_ACCOUNT_TOKEN
- Use ?ssh-format=openssh to get SSH key in correct format
- Fix GitHub Token field name (token instead of credential)
- Override 1Password agent config (doesn't work in container)

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -48,8 +48,8 @@ RUN curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | d
     && apt-get install -y gh \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Claude Code CLI
-RUN npm install -g @anthropic-ai/claude-code
+# Install Claude Code CLI (native installer)
+RUN curl -fsSL https://claude.ai/install.sh | sh
 
 # Install AWS CLI
 RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" \
